--- a/src/user/components/login_register/css/addresume.css
+++ b/src/user/components/login_register/css/addresume.css
@@ -85,11 +85,14 @@
     background-color: #fff;
     border-radius: 5px;
     overflow: hidden;
+    cursor: pointer;
 }
-.boxfileUpInfo label:hover{
+.boxfileUpInfo label{
     border: 1px solid #FF4F16;
-    padding: 2px 15px;
+    padding: 2px 10px;
     border-radius: 5px;
+    cursor: pointer;
+
 }
 .boxfileUpInfo input {
     display: none;
