Update add signup1, 2 and cvregister

--- a/src/user/components/products/css/productHome.css
+++ b/src/user/components/products/css/productHome.css
@@ -9,10 +9,6 @@ a {
     margin-top: 6.5rem;
 }
 
-.filter_priceProduct option[disabled] {
-    pointer-events: none;
-}
-
 .productHead_content {
     width: 100%;
     overflow: hidden;
@@ -44,7 +40,7 @@ a {
     padding: 3px 10px;
     background-color: #ff50166d;
     border-radius: 5px;
-    color: #ffffff;
+    color: #FF4F16;
 }
 .box_TfiMenuAlt{
     display: flex;
@@ -63,13 +59,12 @@ a {
     font-size: 24px;
     color: #FF4F16;
 }
-.filter_priceProduct {
+.filter_position {
     font-size: 15px;
     padding: 7px 15px;
     border-radius: 5px;
     border: 1px solid #FF4F16;
     cursor: pointer;
-    color: #FF4F16;
 }
 
 
@@ -214,6 +209,7 @@ a {
     border-radius: 7px;
     cursor: pointer;
     overflow: hidden;
+    padding: 5px;
 }
 
 .group_itemBox:hover {
@@ -287,8 +283,22 @@ a {
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
 
-    .group_itemBox .box_image {
+    /* .group_itemBox .box_image {
         height: 140px;
+    } */
+    .box_image {
+        width: 150px;
+        height: auto;
+        overflow: hidden;
+    }
+    
+    .box_image img {
+        width: 100%;
+        height: 100px;
+        object-fit: cover;
+        overflow: hidden;
+        padding: 8px;
+        border-radius: 100%;
     }
 
     .group_itemBox .txtOFproduct {
@@ -316,6 +326,7 @@ a {
 @media screen and (max-width: 767px) {
     #product1 {
         width: 90%;
+        margin-bottom: 10rem;
     }
 
     .box_cart_search {
@@ -344,9 +355,10 @@ a {
         align-items: flex-start;
     }
     .box_container_ux_ui{
-        width: 90%;
+        width: 100%;
     }
-    .container_Uxui{
+    .container_Uxui p{
         display: none;
+
     }
 }
