--- a/src/user/components/login_register/css/addresume.css
+++ b/src/user/components/login_register/css/addresume.css
@@ -155,6 +155,8 @@
         margin: 0 0 2rem 0;
         overflow: hidden;
         padding: 10px;
+        margin-top: 6rem;
+        margin-bottom: 8rem;
     }
 
     .image_profile_user {
