Update home page pull api

--- a/src/user/components/menu/menu.css
+++ b/src/user/components/menu/menu.css
@@ -77,6 +77,8 @@
     color: #444;
 }
 
+
+
 /*---------- Menu For Mobile ----------*/
 .menubar {
     display: none;
@@ -104,12 +106,18 @@
     .foot_contentItem {
         gap: 10px;
     }
+    #icon_FcAbout{
+        color: #ccc;
+    }
 }
 
 @media screen and (max-width: 431px) {
     .footerBox {
         display: none;
 
+    }
+    #icon_FcAbout{
+        color: #ccc;
     }
 
     .menubar {
