--- a/src/user/components/products/css/productBuy.css
+++ b/src/user/components/products/css/productBuy.css
@@ -27,31 +27,67 @@ body {
 }
 
 /*  */
+.boxProduct_deteils {
+  width: 100%;
+  width: 100%;
+
+  margin: 2rem 0;
+  display: flex;
+  gap: 2rem;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid #ccc;
+
+}
+
 .product-details-container {
   text-align: center;
-  padding: 20px;
 }
 
 .pdf-viewer {
   width: 100%;
-  height: 100%; /* Adjust height as needed */
+  height: 100%;
+  /* Adjust height as needed */
 }
+
 .box-check {
   color: #ff4f16;
   align-items: center;
   display: flex;
-  justify-content: flex-end; /* Align to the right */
-  gap: 10px; /* Adjust as needed */
+  justify-content: flex-end;
+  /* Align to the right */
+  gap: 10px;
+  /* Adjust as needed */
 }
 
 /* CSS for checkbox styling */
 .checkbox {
-  display: none; /* Hide the actual checkbox */
+  display: none;
+  /* Hide the actual checkbox */
 }
 
 .checkbox-label {
   position: relative;
   cursor: pointer;
+}
+
+.myslides {
+  width: 250px;
+  height: auto;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+}
+
+.myslides img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.txtContentproduct {
+  width: 100%;
+  display: grid;
 }
 
 .checkbox-custom {
@@ -65,16 +101,19 @@ body {
   justify-content: center;
 }
 
-.checkbox:checked + .checkbox-custom::after {
-  content: "\2714"; /* Unicode character for checkmark */
+.checkbox:checked+.checkbox-custom::after {
+  content: "\2714";
+  /* Unicode character for checkmark */
   font-size: 15px;
-  color: #ff4f16; /* Change the color of the checkmark */
+  color: #ff4f16;
+  /* Change the color of the checkmark */
 }
 
 .box_container_back_icons_back {
   display: flex;
   align-items: center;
 }
+
 /* ----------- Media Screen ---------------- */
 @media screen and (min-width: 1537px) and (max-width: 1950px) {
   .contentBody {
@@ -118,7 +157,8 @@ body {
 
   .pdf-viewer {
     width: 100%;
-    height: 100%; /* Adjust height as needed */
+    height: 100%;
+    /* Adjust height as needed */
   }
 }
 
@@ -130,8 +170,10 @@ body {
 
   .pdf-viewer {
     width: 100%;
-    height: 100%; /* Adjust height as needed */
+    height: 100%;
+    /* Adjust height as needed */
   }
+
   .contentBody {
     width: 90%;
     margin: 6rem auto;
@@ -156,10 +198,13 @@ body {
 
   .pdf-viewer {
     width: 100%;
-    height: 100%; /* Adjust height as needed */
+    height: 100%;
+    /* Adjust height as needed */
   }
+
   .contentBody {
     width: 100%;
+    margin-top: 1rem;
   }
 
   .product-page-img {
@@ -167,9 +212,7 @@ body {
   }
 
   .boxProduct_deteils {
-    grid-template-columns: 1fr;
-    gap: 0;
-    margin: 2rem 0;
+    display: flex;
   }
 
   .txtContentproduct {
@@ -184,14 +227,18 @@ body {
 
 @media screen and (max-width: 431px) {
   .boxProduct_deteils {
-    display: block;
+    display: flex;
     gap: 2rem;
   }
 
   .contentBody {
-    width: 100%;
+    width: 95%;
     padding: 10px;
-    margin: 5rem auto 7rem auto;
+    margin: 4.5rem auto 7rem auto;
+  }
+
+  .box-check {
+    margin-top: 1rem;
   }
 
   .txt_nameP {
@@ -218,24 +265,24 @@ body {
   }
 
   .myslides {
-    width: 100%;
-    height: 430px;
-    background-size: cover;
+    width: 100px;
+    height: auto;
+    margin: auto;
+    position: relative;
     overflow: hidden;
   }
 
   .myslides img {
     width: 100%;
-    height: auto;
-    background-size: cover;
-    object-fit: contain;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
   }
 
   .txtContentproduct {
     padding: 10px;
     width: 100%;
     margin: auto;
-    margin-top: -7rem;
     overflow: hidden;
   }
 
@@ -264,7 +311,7 @@ body {
 
   .myslides {
     width: 100%;
-    height: 380px;
+    height: 430px;
     background-size: cover;
     overflow: hidden;
   }
