--- a/src/user/components/contact/aboutUs.css
+++ b/src/user/components/contact/aboutUs.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,4 +10,27 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.box-1 {
+    padding: 1rem;
+    width: 100%;
+    background: #fff;
+}
+
+
+.pic {
+    width: 45%;
+    height: auto;
+    float: left;
+    margin-right: 20px;
+}
+
+.pic img {
+    width: 100%;
+}
+
+.text {
+    /* width: 55%; */
+    flex-grow: 1;
 }
