--- a/src/user/components/contact/aboutUs.css
+++ b/src/user/components/contact/aboutUs.css
@@ -10,18 +10,20 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    gap: 2rem;
 }
 
 .box-1 {
     padding: 1rem;
     width: 100%;
     background: #fff;
+    overflow: auto;
+    margin-bottom: 2rem;
 }
 
 
 .pic {
-    width: 45%;
-    height: auto;
+    width: 35%;
     float: left;
     margin-right: 20px;
 }
@@ -31,6 +33,7 @@
 }
 
 .text {
-    /* width: 55%; */
-    flex-grow: 1;
+    width: 90%;
+    word-wrap: break-word;
+    /* flex-grow: 1; */
 }
