--- a/src/user/components/login_register/css/addresume.css
+++ b/src/user/components/login_register/css/addresume.css
@@ -156,7 +156,7 @@
         overflow: hidden;
         padding: 10px;
         margin-top: 6rem;
-        margin-bottom: 8rem;
+        margin-bottom: 10rem;
     }
 
     .image_profile_user {
@@ -178,6 +178,8 @@
     .box_container_adresume {
         margin: 0 0 2rem 0;
         padding: 0 10px;
+        margin-bottom: 10rem;
+        margin-top: 6rem;
     }
 
     .image_profile_user {
