Update activate heart in home page

--- a/src/user/components/products/css/productHome.css
+++ b/src/user/components/products/css/productHome.css
@@ -293,9 +293,12 @@ a {
     margin-left: 0.8rem;
 }
 
+
 #icon_FaRegHeart{
     font-size: 22px;
-    color: #FF4F16;
+}
+#icon_FaRegHeart{
+    font-size: 22px;
 }
 
  .button_see{
