--- a/src/user/components/header/css/header.css
+++ b/src/user/components/header/css/header.css
@@ -29,9 +29,15 @@
     align-items: center;
     font-size: 1.3rem;
 }
+
+.logo1{
+    width: 50px;
+    object-fit: cover;
+}
 .logo1 img{
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 50px;
+    overflow: hidden;
 }
 
 .icon_account_login{
@@ -152,6 +158,7 @@
     width: 130px;
     height: 10vh;
     overflow: hidden;
+    object-fit: cover;
 }
 .storename img{
     position: relative;
@@ -159,6 +166,7 @@
     width: 100%;
     height: 80%;
     border-radius: 5px;
+    overflow: hidden;
 }
 
 
