--- a/src/user/components/account/css/more.css
+++ b/src/user/components/account/css/more.css
@@ -83,6 +83,24 @@
     height: 25px;
     color: #5a5858dd;
 }
+.menu_icon {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    padding: 20px 0;
+    cursor: pointer;
+    color: black;
+    font-weight: 600;
+}
+.menu_icon:hover #icon_more{
+    color: var(--orange);
+    transition: 0.3s;
+}
+.menu_icon:hover .txtP{
+    color: var(--orange);
+    transition: 0.3s;
+}
+
 
 .menu_icon:hover {
     color: var(--orange);
