--- a/src/user/components/products/css/productHome.css
+++ b/src/user/components/products/css/productHome.css
@@ -104,7 +104,12 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #444;
+    cursor: pointer;
+}
+.num_admin_product.active {
+    background-color: #007bff;
+    border: none;
+    color: #fff;
 }
 .box_prev_right_product {
     width: 80px;
