Update dashboard admin.

--- a/src/admin/components/adminMenu/adminMenu.css
+++ b/src/admin/components/adminMenu/adminMenu.css
@@ -125,7 +125,7 @@ body {
 }
 
 
-/* =========== onClick icon edit ===============*/
+/* =========== onClick icon Log out ===============*/
 
 .background_addproductpopup_box {
     position: fixed;
