--- a/src/admin/components/products/css/product.css
+++ b/src/admin/components/products/css/product.css
@@ -23,28 +23,6 @@ a {
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
-.box_add_product{
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    justify-content: center;
-    font-size: 15px;
-    padding: 7px 15px;
-    border-radius: 5px;
-    margin-right: 2rem;
-    color: #FFFFFF;
-    background-color: #15c65c;
-}
-#icon_add_product{
-    width: 25px;
-    height: 25px;
-}
-
-
-
-
-/* input search box */
-
 .search-box_product {
     display: flex;
     align-items: center;
@@ -52,8 +30,6 @@ a {
     margin: auto;
     padding: 10px 0 25px 0;
 }
-
-
 
 .search-box_product input {
     width: 700px;
@@ -75,20 +51,6 @@ a {
     border-radius: 0 5px 5px 0;
 }
 
-
-/* =========== productHome.css ============*/
-
-a {
-    text-decoration: none;
-}
-
-#product {
-    width: 65%;
-    margin: auto;
-    height: auto;
-    margin-top: 5.5rem;
-}
-
 .productHead_content {
     width: 100%;
     overflow: hidden;
@@ -96,24 +58,6 @@ a {
     justify-content: space-between;
     margin-bottom: 0.5rem;
 }
-.box_cart{
-    margin-left: 12.8rem;
-}
-.box_icon_cart {
-    color: #3a3a3a;
-    display: flex;
-    font-size: 1.6rem;
-    margin-top: -1.3rem;
-    padding: 5px 5px;
-    border: 1px solid var(--gray);
-    border-radius: 10%;
-    background-color: #e9e5e5a1;
-}
-
-.box_icon_cart:hover {
-    color: #FF4F16;
-}
-
 
 .htxthead,
 .categoryBoxfiler {
@@ -122,29 +66,11 @@ a {
     gap: 10px;
 }
 
-.filter_priceProduct {
-    font-size: 15px;
-    padding: 7px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 .spennofStyle {
     width: 20px;
     height: 40px;
     background-color: #FF4F16;
     border-radius: 4px;
-}
-#product .box-product {
-    width: 100%;
-    height: auto;
-    display: flex;
-    border: 1px solid #eee;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 7px;
-    cursor: pointer;
-    overflow: hidden;
 }
 
 .banner_no_box {
@@ -166,240 +92,18 @@ a {
     cursor: pointer;
 }
 
-.edit_image_banner {
-    position: absolute;
-    top: 5px;
-    right: 8px;
-    background-color: #FFF;
-    border-radius: 5px;
-    padding: 5px 5px 0 5px;
-    font-size: 20px;
-    margin: 3px;
-}
-.trigger_popup_fricc {
-    cursor: pointer;
-    position: relative;
-}
-#box_icon_camera{
-    color: #f46738;
-}
 
-.hover_bkgr_fricc {
-    position: fixed;
-    left: 32%;
-    bottom: 55%;
-    width: 35%;
-    height: 50vh;
-    background-color: #fff;
-    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.10);
-    text-align: center;
-    z-index: 999;
-    border-radius: 20px;
-}
-
-.hover_bkgr_fricc p {
-    font-size: 16px;
-    margin-top: 1rem;
-}
-
-.txtOFproduct {
-    display: flex;
-    padding: 0 20px 10px 20px;
-    flex-direction: column;
-    gap: 10px;
-    list-style: none;
-}
-
-.boxfilterseach {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.price {
-    font-weight: 600;
-}
-
-.btnViewProduct {
-    width: 170px;
-    padding: 10px 0;
-    color: #FFF;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    background-color: #FF4F16;
-    border-radius: 7px;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-
-
-
-
-/*====================== All Product ================*/
 #container_product_admin {
     width: 90%;
     margin: auto;
-    margin-top: 5rem;
     position: relative;
 }
-.container_home {
-    width: 65%;
-    margin: 0 auto;
-}
 
-.container_head_search {
-    display: flex;
-    align-items: center;
-    margin: 2rem auto;
-    margin-bottom: 0;
-    justify-content: center;
-    width: 40%;
-    position: relative;
-    border: 1px solid #ccc;
-    background-color: #FFF;
-    border-radius: 12px;
-    padding: 0.5rem 1rem;
-    top: 70px;
-}
-.box_cart_search{
-    margin-left: 10.5rem;
-}
-.box_icon_search {
-    color: #3a3a3a;
-    display: flex;
-    font-size: 1.6rem;
-    margin-top: -1.3rem;
-    padding: 5px 5px;
-    border: 1px solid var(--gray);
-    border-radius: 10%;
-    background-color: #e9e5e5a1;
-}
-
-.box_icon_search:hover {
-    color: #FF4F16;
-}
-
-.container_head_search input {
-    width: 100%;
-}
 
 .box_container_img {
     background-color: #FFF;
     margin: auto;
 }
-
-.box_Filterseach_home{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-input {
-    background-color: transparent;
-    border: none;
-    width: 100%;
-    height: 100%;
-    font-size: 16px;
-}
-
-input:focus {
-    outline: none;
-}
-
-.onlacksearch {
-    cursor: pointer;
-}
-
-#search-icon {
-    width: 25px;
-    height: 25px;
-    color: #a5a5a5;
-    margin-right: 1rem;
-}
-
-.container_product {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 3rem 0rem;
-    margin-top: 3rem;
-}
-
-.container_product .categoryFilter:first-child {
-    margin: 0 1rem;
-}
-
-.content_itemBox{
-    margin-top: -3.5rem;
-}
-
-.product_fillter {
-    display: flex;
-    gap: 10px;
-
-}
-
-.container_product h3 {
-    font-size: 23px;
-    font-family: 600;
-    padding-bottom: -10rem;
-}
-
-.categoryFilter {
-    /*Is price filter*/
-    cursor: pointer;
-    font-size: 15px;
-    padding: 7px 10px;
-    border-radius: 5px;
-}
-
-.contentImageProducts {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1rem;
-    margin-top: 3rem;
-}
-.contentImageProduct {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1rem;
-    margin-top: 0.5rem;
-}
-
-.group_itemBox:hover {
-    box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
-}
-
-.txtOFproduct {
-    display: flex;
-    /* padding: 0 20px 10px 20px; */
-    flex-direction: column;
-    gap: 10px;
-    list-style: none;
-}
-
-.loadmore_btn_more {
-    padding: 12px 50px;
-    background: #FF4F16;
-    color: #ffffff;
-    border-radius: 5px;
-    border: 1px;
-    cursor: pointer;
-    margin: 3rem 0 2rem 0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.10);
-}
-
-.btn_more {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 
 .box_icon_MdOutlineEdit{
     display: flex;
@@ -416,97 +120,28 @@ input:focus {
     border-radius: 4px;
 }
 
-
-
-
-/* ============ box_prev_next =========== */
-.box_container_next_product{
-    display: flex;
-    gap: 1rem;
-    cursor: pointer;
-    border: none;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1.5rem;
-    bottom: 0;
-}
-.box_prev_left_product{
-    width: 80px;
-    height: 40px;
-    display: flex;
-    gap: 0.3rem;
-    color: #FFF;
-    cursor: pointer;
-    border: none;
-    border-radius: 6px;
-    align-items: center;
-    justify-content: center;
-    background: #FA442C;
-}
-.box_prev_right_product{
-    width: 80px;
-    height: 40px;
-    display: flex;
-    gap: 0.3rem;
-    color: #FFF;
-    cursor: pointer;
-    border: none;
-    border-radius: 6px;
-    align-items: center;
-    justify-content: center;
-    background: #27A7EF;
-}
-
-#box_icon_left_right_product1{
-    width: 20px;
-    height: 20px;
-}
-
-.num_admin_product{
-    width: 70px;
-    height: 40px;
-    border-radius: 6px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #444;
-}
-.box_prev_left_product p{
-    font-size: 14px;
-}
-.box_prev_right_product p{
-    font-size: 14px;
-}
-.box_num_product p{
-    font-size: 16px;
-}
-
-.box_num_product{
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    justify-content: center;
-}
-
-
-
 #container_product_admin .product-area {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1rem;
 }
 
-
+#container_product_admin .container_box {
+    width: 100%;
+    height: auto;
+    align-items: center;
+    border-radius: 7px;
+    padding: 5px;
+    border: 1px solid #cccccc50;
+}
 #container_product_admin .box-product {
     width: 100%;
     height: auto;
+    padding: 5px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 7px;
 }
 
-#container_product_admin .box-product:hover {
+#container_product_admin .container_box:hover {
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 }
 
@@ -566,8 +201,6 @@ input:focus {
     color: #f46738;
 }
 
-
-
 .box_icon_camera_product {
     position: absolute;
     top: 5px;
@@ -578,17 +211,6 @@ input:focus {
     font-size: 25px;
     margin: 3px;
 }
-.box_icon_camera {
-    cursor: pointer;
-    position: relative;
-}
-
-
-#icon_camera_product{
-    color: #f46738;
-}
-
- 
 
 .txtOFproduct {
     width: 100%;
@@ -596,14 +218,13 @@ input:focus {
     padding: 10px;
     flex-direction: column;
     gap: 10px;
-    margin-top: -1.9rem;
     list-style: none;
 }
-
-.priceProduct {
-    font-weight: 600;
+.box_input_image img{
+    width: 210px;
+    height: 220px;
+    padding: 16px 0;
 }
-
 
 /* =========== onClick icon edit ===============*/
 
@@ -731,4 +352,15 @@ input:focus {
 .btn_foasdf {
     display: flex;
 }
+
+
+.contentImageProducts {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1rem;
+    margin-top: 3rem;
+}
+
+
+
 
