--- a/src/admin/components/products/css/product.css
+++ b/src/admin/components/products/css/product.css
@@ -18,6 +18,7 @@ a {
     height: auto;
     margin: auto;
     margin-top: 1rem;
+    margin-bottom: 2rem;
     padding: 20px 20px 30px 20px;
     background: #FFF;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.15);
@@ -75,7 +76,7 @@ a {
 
 .banner_no_box {
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: -40px;
     margin-top: 2.5rem;
 }
 .banner_no_box input{
@@ -105,26 +106,7 @@ a {
     margin: auto;
 }
 
-.box_icon_MdOutlineEdit{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-}
-#icon_edit{
-    width: 30px;
-    height: 30px;
-    padding: 5px 2px;
-    background: #ccc;
-    color: #FFF;
-    border-radius: 4px;
-}
 
-#container_product_admin .product-area {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1rem;
-}
 
 #container_product_admin .container_box {
     width: 100%;
@@ -197,11 +179,22 @@ a {
     font-size: 20px;
     margin: 3px;
 }
-#box_icon_camera_product{
+.edit_image_banner {
+    position: absolute;
+    top: 5px;
+    right: 8px;
+    background-color: #FFF;
+    border-radius: 5px;
+    padding: 5px 5px 0 5px;
+    font-size: 20px;
+    margin: 3px;
+    cursor: pointer;
+}
+#box_icon_camera{
     color: #f46738;
 }
 
-.box_icon_camera_product {
+.box_icon_camera {
     position: absolute;
     top: 5px;
     right: 5px;
@@ -210,6 +203,7 @@ a {
     padding: 5px 5px 0 5px;
     font-size: 25px;
     margin: 3px;
+    display: none;
 }
 
 .txtOFproduct {
@@ -353,14 +347,124 @@ a {
     display: flex;
 }
 
+/*=====================================*/
 
-.contentImageProducts {
+
+.contentImageProducts1 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
-    margin-top: 3rem;
-}
+    margin-top: 2rem;
+  }
 
+  .group_itemBox {
+    width: 100%;
+    height: auto;
+    border: 1px solid #eee;
+    border-radius: 7px;
+    cursor: pointer;
+    overflow: hidden;
+    padding: 5px;
+  }
+  
+  .group_itemBox:hover {
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+  }
+  
+  .group_itemBox .txtOFproduct {
+    width: 50%;
+    margin-top: 0.1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    list-style: none;
+  }
+  
+  .group_itemBox_user {
+    width: 100%;
+    height: auto;
+    border: 1px solid #eee;
+    border-radius: 7px;
+    cursor: pointer;
+    overflow: hidden;
+    padding: 5px;
+  }
+  
+  .group_itemBox_user:hover {
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+  }
+  
+  .group_itemBox_user .txtOFproduct_user {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    list-style: none;
+  }
 
+  .containner_box_image {
+    width: 100%;
+    display: flex;
+  }
+  .containner_box_image_user {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .box_image {
+    width: 150px;
+    height: auto;
+    overflow: hidden;
+  }
+  
+  .box_image img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+    overflow: hidden;
+    padding: 8px;
+    border-radius: 100%;
+  }
+  .box_image_user {
+    width: 100px;
+    height: auto;
+    overflow: hidden;
+  }
+  
+  .box_image_user img {
+    width: 100%;
+    height: 85px;
+    object-fit: cover;
+    overflow: hidden;
+    padding: 8px;
+    border-radius: 100%;
+  }
+
+  .btn_button_see {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 10px;
+  }
+  .btn_button_see_user {
+    display: grid;
+    gap: 1rem;
+    padding: 10px;
+  }
+  .btn_button_see_user #icon_FaRegHeart {
+    margin-left: 0.8rem;
+  }
+
+  .button_view {
+    padding: 4px 10px;
+    border: none;
+    border-radius: 3px;
+    color: #ffffff;
+    font-size: 14px;
+    cursor: pointer;
+    background: #ff4f16;
+  }
 
 
