--- a/src/user/components/login_register/css/signup.css
+++ b/src/user/components/login_register/css/signup.css
@@ -5,10 +5,10 @@
   margin-top: 7.5rem;
 }
 
-.title_mt20 {
+/* .title_mt20 {
   font-size: 22px;
   margin-top: 2rem;
-}
+} */
 
 .signup_page p {
   font-size: 18px;
