--- a/src/user/components/resume/css/detail.css
+++ b/src/user/components/resume/css/detail.css
@@ -32,7 +32,7 @@ body {
 }
 
 /*  */
-.boxProduct_deteils {
+.boxresume_deteils {
   width: 100%;
   width: 100%;
 
@@ -44,7 +44,7 @@ body {
 
 }
 
-.product-details-container {
+.resume-details-container {
   text-align: center;
 }
 
@@ -89,7 +89,7 @@ body {
   border-radius: 5px;
 }
 
-.txtContentproduct {
+.txtContentresume {
   width: 100%;
   display: grid;
 }
@@ -124,7 +124,7 @@ body {
     width: 60%;
   }
 
-  .product-page-img .slider_img {
+  .resume-page-img .slider_img {
     width: 100%;
     height: 50px;
     overflow: scroll;
@@ -132,11 +132,11 @@ body {
     user-select: none;
   }
 
-  .product-page-img .slider_img::-webkit-scrollbar {
+  .resume-page-img .slider_img::-webkit-scrollbar {
     display: none;
   }
 
-  .product-page-img .slider_img .slider-box {
+  .resume-page-img .slider_img .slider-box {
     width: 50px;
     height: 50px;
     min-width: 50px;
@@ -147,14 +147,14 @@ body {
     opacity: 0.6px;
   }
 
-  .product-page-img .slider_img .slider-box img {
+  .resume-page-img .slider_img .slider-box img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: inline-block;
   }
 
-  .product-details-container {
+  .resume-details-container {
     text-align: center;
     padding: 20px;
   }
@@ -167,7 +167,7 @@ body {
 }
 
 @media screen and (max-width: 1025px) {
-  .product-details-container {
+  .resume-details-container {
     text-align: center;
     padding: 20px;
   }
@@ -183,19 +183,19 @@ body {
     margin: 6rem auto;
   }
 
-  .boxProduct_deteils {
+  .boxresume_deteils {
     grid-template-columns: 1fr 2fr;
     gap: 0;
     margin: 2rem 0;
   }
 
-  .txtContentproduct {
+  .txtContentresume {
     width: 100%;
   }
 }
 
 @media screen and (max-width: 830px) {
-  .product-details-container {
+  .resume-details-container {
     text-align: center;
     padding: 0;
   }
@@ -211,15 +211,15 @@ body {
     margin-top: 1rem;
   }
 
-  .product-page-img {
+  .resume-page-img {
     width: 70%;
   }
 
-  .boxProduct_deteils {
+  .boxresume_deteils {
     display: flex;
   }
 
-  .txtContentproduct {
+  .txtContentresume {
     width: 70%;
     margin: auto;
   }
@@ -230,7 +230,7 @@ body {
 }
 
 @media screen and (max-width: 431px) {
-  .boxProduct_deteils {
+  .boxresume_deteils {
     display: flex;
     gap: 2rem;
   }
@@ -264,7 +264,7 @@ body {
     overflow: hidden;
   }
 
-  .product-page-img {
+  .resume-page-img {
     width: 100%;
   }
 
@@ -283,14 +283,14 @@ body {
     border-radius: 50%;
   }
 
-  .txtContentproduct {
+  .txtContentresume {
     padding: 10px;
     width: 100%;
     margin: auto;
     overflow: hidden;
   }
 
-  .product-page-img {
+  .resume-page-img {
     width: 100%;
   }
 
@@ -299,7 +299,7 @@ body {
     height: auto;
   }
 
-  .product-page-img .slider_img {
+  .resume-page-img .slider_img {
     width: 100%;
   }
 
@@ -309,7 +309,7 @@ body {
 }
 
 @media screen and (max-width: 376px) {
-  .product-page-img {
+  .resume-page-img {
     width: 100%;
   }
 
