--- a/src/user/components/contact/aboutUs.css
+++ b/src/user/components/contact/aboutUs.css
@@ -1,68 +1,72 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-h2, h3 {
-    font-family: 'Saysettha OT';
+h2,
+h3 {
+  font-family: "Saysettha OT";
 }
 
 .about-us {
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    padding: 6rem 1rem;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 6rem 1rem;
+}
+
+.about-us .iframe {
+  width: 100%;
+  height: 90vh;
 }
 
 .box {
-    overflow: auto;
-    margin: 1rem auto;
-    background-color: #ffffffaa;
-    
+  overflow: auto;
+  margin: 1rem auto;
+  background-color: #ffffffaa;
 }
 
 .pic {
-    width: 700px;
-    height: 350px;
-    overflow: hidden;
+  width: 700px;
+  height: 350px;
+  overflow: hidden;
 }
 
 .pic img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 ._1 .pic {
-    float: left;
-    margin-right: 20px;
+  float: left;
+  margin-right: 20px;
 }
 
 ._2 .pic {
-    float: right;
-    margin-left: 20px;
+  float: right;
+  margin-left: 20px;
 }
 
 .text {
-    font-size: 24px;
-    font-family: 'Saysettha OT';
-    text-align: justify;
-    text-indent: 50px;
-    padding: 0 1rem;
+  font-size: 24px;
+  font-family: "Saysettha OT";
+  text-align: justify;
+  text-indent: 50px;
+  padding: 0 1rem;
 }
 
 .recruiting {
-    padding: 0 1rem;
+  padding: 0 1rem;
 }
 
 ul {
-    padding: 0 1rem;
-    color: red;
+  padding: 0 1rem;
+  color: red;
 }
 
-ul li{
-    font-family: "Saysettha OT";
+ul li {
+  font-family: "Saysettha OT";
 }
-
