--- a/src/user/components/contact/aboutUs.css
+++ b/src/user/components/contact/aboutUs.css
@@ -10,76 +10,35 @@ h3 {
 }
 
 .link {
-  text-align: center;
-  padding: 1rem;
+  display: flex;
+  justify-content: center;
 }
 
 .link button {
   padding: 0.5rem;
   border-radius: 7px;
-  background-color: orangered;
+  background-color: white;
+  cursor: pointer;
   margin: 1rem;
-  margin-top: 6rem;
+  margin-top: 7rem;
+  border: solid 1px #ccc;
+  z-index: 1;
 }
 
 .about-us {
-  width: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 6rem 1rem;
+  position: relative;
+  margin: 0 auto;
+  width: 80%;
+  height: 80vh;
 }
 
-.about-us .iframe {
-  width: 100%;
-  height: 90vh;
-}
-
-.box {
-  overflow: auto;
-  margin: 1rem auto;
-  background-color: #ffffffaa;
-}
-
-.pic {
-  width: 700px;
-  height: 350px;
-  overflow: hidden;
-}
-
-.pic img {
+.about-us .box {
+  position: absolute;
+  top: -6%;
   width: 100%;
   height: 100%;
-  object-fit: contain;
 }
-
-._1 .pic {
-  float: left;
-  margin-right: 20px;
-}
-
-._2 .pic {
-  float: right;
-  margin-left: 20px;
-}
-
-.text {
-  font-size: 24px;
-  font-family: "Saysettha OT";
-  text-align: justify;
-  text-indent: 50px;
-  padding: 0 1rem;
-}
-
-.recruiting {
-  padding: 0 1rem;
-}
-
-ul {
-  padding: 0 1rem;
-  color: red;
-}
-
-ul li {
-  font-family: "Saysettha OT";
+.about-us .iframe {
+  width: 100%;
+  height: 100%;
 }
