--- a/src/user/components/login_register/css/forgotpassword.css
+++ b/src/user/components/login_register/css/forgotpassword.css
@@ -7,7 +7,9 @@
 
 .title {
   margin-top: 1.5rem;
-  font-size: 18px;
+  font-size: 10px;
+  
+  display: none;
 }
 
 .container_form_forgot2 {
@@ -63,6 +65,10 @@
 }
 
 
+.box_infor_txt {
+  font-size: 18px;
+  margin-top: 1rem;
+}
 .box_infor {
   font-size: 18px;
   font-weight: 600;
