Update in DetailCV, CVregister and Details

--- a/src/user/components/cv/css/detailCV.css
+++ b/src/user/components/cv/css/detailCV.css
@@ -8,7 +8,9 @@ a {
     height: auto;
     margin-top: 6.5rem;
 }
-
+.box_RotatingLines{
+    text-align: center;
+}
 
 .productHead_contents {
     width: 100%;
