--- a/src/user/components/resume/css/detail.css
+++ b/src/user/components/resume/css/detail.css
@@ -118,6 +118,11 @@ body {
   align-items: center;
 }
 
+.box_RotatingLines{
+  text-align: center;
+  margin-top: 10rem;
+}
+
 /* ----------- Media Screen ---------------- */
 @media screen and (min-width: 1537px) and (max-width: 1950px) {
   .contentBody {
